# test

./: .gitignore  hack.py  hello.txt
liner/: README.md  package-lock.json  package.json
liner/src/: index.css  main.jsx  router.jsx
liner/src/APPs/: calculator_process.jsx  calculator_process.module.css  matrix_mainpage.jsx  matrix_mainpage.module.css
liner_2/: package-lock.json  package.json
liner_2/src/: router.jsx
liner_2/src/APPs/: DrawBoard.jsx  DrawBoard.module.css  Introduce.jsx  index.jsx  index.module.css  introduce.module.css  matrix_part.jsx  matrix_part.module.css
text_ad/: CMakeLists.txt  README.md  main.cpp
text_ad/include/: background_set.cpp  background_set.h  role.cpp  role.h  tool.cpp  tool.h
上課筆記_計畫/: .gitignore  README.md  current_note.txt  fix.py  lecture1.py  main.py  requirements.txt  setup.ps1  start.ps1
上課筆記_計畫/utiles/: AudioHelper.py  GPT_controller.py  STT.py  config.py  my_logging.py
